namespaces/newapp-2/asm-auth-ns-policy.yaml
# Copyright 2023 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
### can be in base
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: asm-auth-ns-policy
  namespace: newapp-2
spec:
  action: ALLOW
  rules:
  - from:
    - source:
        namespaces: ["asm-gateway", "newapp-1", "newapp-2"]
  # - to:
  #   - operation:
  #       ports:
  #       - "443"
  
  # kubectl exec "$(kubectl get pod -l app: svc-a -n  tenant-a  -o jsonpath={.items..metadata.name})" -c istio-proxy -n tenant-a -- curl -X POST 127.0.0.1:15000/logging?rbac=debug
